--- a/static/styles.css
+++ b/static/styles.css
@@ -3,7 +3,24 @@
 }
 
 h1.title {
-  font-size: 60px;
+  font-size: 6em;
+}
+
+.site-card {
+  display: flex;
+  flex-direction: column;
+  padding: 2vw;
+  width: 30vw;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.site-card a {
+  text-decoration: none;
+}
+
+.content {
+  width: 10vw;
 }
 
 .container {
@@ -13,22 +30,42 @@ h1.title {
   align-items: center;
 }
 .content {
-  width: 20vw;
+  width: 80vw;
 }
 .results {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
-.site-card {
-  display: flex;
-  flex-direction: column;
-  padding: 2vw;
-  text-align: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.site-card a {
+.footer a {
   text-decoration: none;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  text-align: center;
+}
+
+@media only screen and (max-width: 768px) {
+  h1.title {
+    font-size: 3em;
+  }
+
+  .results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .site-card {
+    margin-bottom: 2vh;
+    min-width: 230px;
+  }
+
+  .content {
+    width: 50vw;
+  }
 }
