:rocket: added update time to footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="footer">
       <p>
-        Made with 💖 by
+        Last update at {{lastupdate}} - Made with 💖 by
         <a href="https://github.com/sleao" target="_blank">Saulo :)</a>
       </p>
     </div>
